Feat: Remove NodeMailer and used SES instead

--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^5.5.3",
-    "nodemailer": "^6.9.7",
-    "q": "^1.5.1"
+    "csv-parse": "^5.5.3"
   }
 }
